Jar comparator Implementation code